# Montreal-Forced-Aligner

./: requirements.txt  setup.cfg
